--- a/capitoli/capitolo-1.tex
+++ b/capitoli/capitolo-1.tex
@@ -10,19 +10,6 @@
 \section{Descrizione IQ Puzzler}
 Lo scopo di IQ Puzzler è quello di riempire la griglia di gioco con tutte le varie forme a disposizione. Queste forme sono di varia dimensione, colore e struttura, e possono essere combinate in diversi modi per completare la griglia.\\
 Il gioco comprende anche 100 configurazioni iniziali, dove alcune forme sono già posizionate all'interno della griglia e solo le rimanenti devono essere piazzate. All'aumentare delle forme rimanenti, aumenta notevolmete la complessità del gioco.\\ 
-\subsection{Griglia di gioco}
-La griglia è formata da 11 righe con 4 o 5 celle, dove ogni cella è collegata solo con quelle nelle sue 2 diagonali. In totale la griglia è formata da 50 celle.
-
-\begin{figure}[h]
-	\centering
-	\includegraphics[scale=0.4]{immagini/griglia}
-	\caption{La griglia di gioco di IQ Puzzler. Le forme possono essere piazzate utilizzando solo le celle bianche.}
-	\label{fig:griglia}
-\end{figure}
-
-\subsection{Forme di gioco}
-Le forme totali sono 11, ognuna con una propria struttura diversa dalle altre, e sono formate da dei pallini collegati in modo da essere inseriti nelle celle della griglia.
-
 \begin{figure}[h]
 	\centering
 	\includegraphics[scale=0.5]{immagini/iqpuzzler}
@@ -30,8 +17,112 @@ Le forme totali sono 11, ognuna con una propria struttura diversa dalle altre, e
 	\label{fig:iqpuzzler}
 \end{figure}
 
+\newpage
+\subsection{Forme di gioco}
+Le forme totali sono 11, ognuna con una propria struttura diversa dalle altre, e sono formate da dei pallini collegati in modo da essere inseriti nelle celle della griglia.
+
+\begin{figure}[h]
+	
+	\begin{minipage}{3.5cm}
+		\centering
+		\includegraphics[scale=0.30]{immagini/p}
+		\caption{}
+		\label{p}
+	\end{minipage}
+	\ \hspace{2mm} \hspace{3mm} \
+	\begin{minipage}{3.5cm}
+		\centering
+		\includegraphics[scale=0.30]{immagini/z}
+		\caption{}
+		\label{z}
+	\end{minipage}
+	\ \hspace{2mm} \hspace{3mm} \
+	\begin{minipage}{3.5cm}
+		\centering
+		\includegraphics[scale=0.30]{immagini/smallv}
+		\caption{}
+		\label{smallv}
+	\end{minipage}
+\end{figure}
+
+\begin{figure}[h]
+	
+	\begin{minipage}{3.5cm}
+		\centering
+		\includegraphics[scale=0.30]{immagini/bigz}
+		\caption{}
+		\label{bigz}
+	\end{minipage}
+	\ \hspace{2mm} \hspace{3mm} \
+	\begin{minipage}{3.5cm}
+		\centering
+		\includegraphics[scale=0.25]{immagini/yellow}
+		\caption{}
+		\label{c}
+	\end{minipage}
+	\ \hspace{2mm} \hspace{3mm} \
+	\begin{minipage}{3.5cm}
+		\centering
+		\includegraphics[scale=0.25]{immagini/Y}
+		\caption{}
+		\label{y}
+	\end{minipage}
+\end{figure}
+
+\begin{figure}[h]
+	
+	\begin{minipage}{3.5cm}
+		\centering
+		\includegraphics[scale=0.30]{immagini/i}
+		\caption{}
+		\label{i}
+	\end{minipage}
+	\ \hspace{2mm} \hspace{3mm} \
+	\begin{minipage}{3.5cm}
+		\centering
+		\includegraphics[scale=0.25]{immagini/T}
+		\caption{}
+		\label{t}
+	\end{minipage}
+	\ \hspace{2mm} \hspace{3mm} \
+	\begin{minipage}{3.5cm}
+		\centering
+		\includegraphics[scale=0.25]{immagini/w}
+		\caption{}
+		\label{w}
+	\end{minipage}
+\end{figure}
+
+\begin{figure}[h]
+	\centering
+	\begin{minipage}{3.5cm}
+		\centering
+		\includegraphics[scale=0.25]{immagini/v}
+		\caption{}
+		\label{v}
+	\end{minipage}
+	\ \hspace{2mm} \hspace{3mm} \
+	\begin{minipage}{3.5cm}
+		\centering
+		\includegraphics[scale=0.30]{immagini/L}
+		\caption{}
+		\label{l}
+	\end{minipage}
+\end{figure}
+
+\newpage
+\subsection{Griglia di gioco}
+La griglia è formata da 11 righe con 4 o 5 celle, dove ogni cella è collegata solo con quelle nelle sue 2 diagonali. In totale la griglia è formata da 50 celle.
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[scale=0.3]{immagini/griglia}
+	\caption{La griglia di gioco di IQ Puzzler. Le forme possono essere piazzate utilizzando solo le celle bianche.}
+	\label{fig:griglia}
+\end{figure}
 
 
+\newpage
 \section{Scopo del progetto}
 Lo scopo del nostro progetto è stato quello di ricreare questo gioco ed implementare alcuni dei metodi risolutivi visti durante il corso di Intelligenza Artificiale per risolverlo. \\
 In un secondo momento abbiamo confrontato le performance dei vari algoritmi in modo da valutare la loro efficienza rispetto a questo problema.
