Aggiunte tabelle prestazioni

--- a/tesi.tex
+++ b/tesi.tex
@@ -93,7 +93,9 @@
                                         % 2. eseguire: biber tesi
                                         % 3. compilare ancora tesi.tex.
 \usepackage{url}
-
+\usepackage{array} % Improves `tabular` and `array` environments
+\usepackage{pict2e} % Allows \linethickness{...} in diagonal lines
+\usepackage{slashbox} % Defines \backslashbox{..}{..}
 \input{tesi-config}                     % file con le impostazioni personali
 
 \begin{document}
