--- a/tesi.tex
+++ b/tesi.tex
@@ -96,6 +96,8 @@
 \usepackage{array} % Improves `tabular` and `array` environments
 \usepackage{pict2e} % Allows \linethickness{...} in diagonal lines
 \usepackage{slashbox} % Defines \backslashbox{..}{..}
+\usepackage{xcolor}
+
 \input{tesi-config}                     % file con le impostazioni personali
 
 \begin{document}
