--- a/capitoli/capitolo-1.tex
+++ b/capitoli/capitolo-1.tex
@@ -130,7 +130,9 @@ In un secondo momento abbiamo confrontato le performance dei vari algoritmi in m
 \section{PEAS}
 
 \subsection{Performance measure}
-La misura di performance è il tempo impiegato da un algoritmo per risolvere il problema a partire da una delle configurazioni iniziali. Oltre al tempo abbiamo anche considerato il numero di azioni necessarie per raggiungere una soluzione.
+\label{performance}
+La misura di performance è il tempo impiegato da un algoritmo per risolvere il problema a partire da una delle configurazioni iniziali. Oltre al tempo, abbiamo anche considerato il numero di azioni necessarie per raggiungere una soluzione, in maniera tale da poter fare osservazioni più precise su alcuni tipi di solver.\\
+Tuttavia, la misura di performance più importante rimane la prima.
 
 \subsection{Environment}
 Il gioco analizzato presenta un ambiente totalmente osservabile, deterministico, sequenziale, statico, discreto e single-agent.  L'ambiente è completamente determinato dallo stato corrente e dall'agente che può effettuare una sola mossa alla volta.
