--- a/capitoli/capitolo-3.tex
+++ b/capitoli/capitolo-3.tex
@@ -23,20 +23,26 @@ La configurazione iniziale del livello 0 è mostrata in figura \ref{lev0}. Le fo
 \\
 \noindent
 
-\begin{table}[h] 
+\begin{table} 
 	\begin{tabular}{|l||*{4}{c|}}\hline 
 		\backslashbox{Miglioria}{Solver} 
 		&\makebox{DFS}&\makebox{Backtracking}&\makebox{Recursive Backtracking}	&\makebox{MinConflicts}\\ \hline 
-		Sì&0.0192 (4.0)&0.0857 (11.0)&0.0708 (11.0)&0.0264 (1.0) \\ \hline 
-		No&0.0786 (30.0)&0.0319 (11.0)&0.0327 (11.0)&0.0208 (1.0)  \\ \hline 
-	\end{tabular}
-	\caption{Tempi di esecuzione in secondi del livello 0} 
+		Sì&\textcolor{ForestGreen}{0.0107 (4.175)}&\textcolor{red}{0.0519 (11.0)}&0.0495 (11.0)&0.0129 (3.4) \\ \hline 
+		No&0.0319 (24.825)&0.0178 (11.0)&0.0175 (11.0)&0.0142 (4.325)  \\ \hline 
+	\end{tabular} 
 \end{table}
 
 \subsubsection{Osservazioni}
-Possiamo notare come a partire da questa configurazione, dove mancano solamente 3 forme da inserire e quindi lo spazio di ricerca è molto limitato, l'algoritmo migliore risulta essere DFS con la miglioria del Connected Component Check, in quanto questo controllo elimina dai domini tutti i valori non consistenti ottenendo così una soluzione mediamente in soli 4 assegnamenti (dai 30 ottenuti senza questo controllo).\\
-Per quanto rigurda gli altri solver, essendo il problema relativamente semplice, il Connected Component Check porta un peggioramento delle prestazioni in quanto introduce complessità aggiuntiva ad ogni assegnamento, senza diminuirne il numero significativamente.
+In questo livello, le forme mancanti sono solamente tre, producendo così uno spazio di ricerca molto limitato. Secondo i test effettutati e sulla base delle misure di perfomance adottate e esposte in \ref{performance}, l'algoritmo migliore risulta essere $DFS$ con la miglioria \textit{Connected Component Check} (d'ora in avanti $CCC$), mentre il peggiore risulta essere quello di $Backtracking$ con la stessa miglioria.\\
 
+La miglioria $CCC$ permette a $DFS$ di ignorare una considerevole porzione dello spazio di ricerca. Ipotizziamo di volere inserire la prima delle tre forme mancanti. Senza la miglioria, l'inserimento di tale forma potrebbe produrre un assegnamento parziale dal quale non è possibile produrre una configurazione finale che corrisponda ad un assegnamento totale e consistente, portando quindi $DFS$ ad esplorare totalmente un cammino che è destinato a non portare ad uno stato obiettivo.\\
+La miglioria, invece, si accorgerebbe subito di questo problema, potando il conseguente sotto albero di ricerca; infatti $DFS$ con miglioria attraversa in media 4.175 stati, mentre senza di essa ne attraversa in media 24.825, oscillando tra un minimo di 10 e un massimo di 30 stati.\\
+Notiamo tuttavia che il tempo per arrivare alla soluzione da parte dei due tipi di $DFS$ non è proporzionale rispetto al numero degli stati attraversati (il primo numero di stati è $1/6$ dell'altro, mentre il primo tempo d'esecuzione è $1/3$ dell'altro). Questo è dovuto al fatto che il $CCC$ richiede ovviamente anch'esso un certo tempo di esecuzione, che però risulta vantaggioso ai fini dell'esplorazione dello spazio degli stati e della soluzione.\\
+
+Per quanto riguarda il $Backtracking$ con la stessa miglioria, esso risulta essere il peggiore per il seguente motivo: notiamo come il $Backtracking$ semplice impieghi poco più del $DFS$ con miglioria, facendo quindi pensare che anch'esso sia un buon solver per questo livello di difficoltà. Tuttavia, dalla tabella si vede come il solver $Backtracking$ semplice e quello con miglioria attraversino lo stesso umero di stati, con la differenza che nel secondo viene eseguito il $CCC$, aumentandone quindi il tempo d'esecuzione.\\
+Possiamo quindi affermare che a parità di stati, o se la loro differenza è poco rilevante, il solver che utilizza il $CCC$ impiegherà più tempo rispetto al suo corrispondente solver senza il $CCC$.\\
+
+Infine, osserviamo che la miglioria \textit{Random Restart} per il solver $MinConflicts$ risulta poco utile, in quanto per la semplicità di questo livello è molto difficile che il solver si "incastri" in qualche minimo locale: nessuno dei test eseguiti per questo solver, con e senza questa miglioria, ha mai portato ad uno stallo in un minimo locale.
 \subsection{Livello 1}
 La configurazione iniziale del livello 1 è mostrata in figura \ref{lev1}. Le forme mancanti da inserire sono mostrate nelle figure \ref{z}, \ref{c}, \ref{y}, \ref{w}.
 \begin{figure}[h]
@@ -47,18 +53,25 @@ La configurazione iniziale del livello 1 è mostrata in figura \ref{lev1}. Le fo
 \end{figure}
 \\
 \noindent
-\begin{table}[h]
+\begin{table} 
 	\begin{tabular}{|l||*{4}{c|}}\hline 
 		\backslashbox{Miglioria}{Solver} 
 		&\makebox{DFS}&\makebox{Backtracking}&\makebox{Recursive Backtracking}	&\makebox{MinConflicts}\\ \hline 
-		Sì&0.0483 (9.66666)&0.1135 (12.0)&0.1104 (12.0)&0.0668 (1.0) \\ \hline 
-		No&0.2974 (147.5)&0.0480 (12.0)&0.0506 (13.0)&0.0910 (1.0)  \\ \hline 
+		Sì&\textcolor{ForestGreen}{0.0271 (9.75)}&0.0666 (12.0)&0.0704 (12.0)&\textcolor{red}{0.5013 (1975.264)} \\ \hline 
+		No&0.1081 (94.675)&0.0257 (12.0)&0.0270 (13.0)&0.0377 (20.82142)  \\ \hline 
 	\end{tabular} 
-	\caption{Tempi di esecuzione in secondi del livello 0} 
 \end{table}
 
 \subsubsection{Osservazioni}
-I risultati ottenuti nel livello 1 rispecchiano quelli del livello precedente, in quanto anche in questo caso lo spazio degli stati è molto limitato (solo 4 forme da inserire). Da notare come il Connected Component Check diminuisca in media da 147 a 9 gli assegnamenti nel caso dell'algoritmo DFS, con un notevole risparmio di tempo.
+
+Per questo livello di difficoltà, i risultati ottenuti con i solver $DFS$, $Backtracking$ e \textit{Recursive Backtracking} rispecchiano quelli ottenuti nel livello 0. Non verrano quindi esposte altre osservazioni su questi solver, in quanto identiche a quelle del livello in oggetto.\\
+
+
+Risulta invece necessario approfondire il significato dei valori riguardanti il solver $MinConflicts$ (rimandiamo a \ref{RR} per il significato di miglioria in questo contesto).\\
+Nonostante questo livello di difficoltà possa sembrare ancora semplice, il solver \textit{MinConflicts} senza la miglioria \textit{Random Restart} (d'ora in avanti $RR$) non ha portato ad una soluzione nel $30\%$ dei test, risultando quindi di utilizzo scarsamente conveniente. \\
+Con la miglioria $RR$, invece, vediamo come il rempo di esecuzione (e il numero di stati attraversati) sia nettamente più alto rispetto a qualsiasi altro solver, ma questo è un valore medio con una varianza troppo elevata per essere interpretato singolarmente. \\Risulta infatti che il numero di stati attraversati oscilli tra un minimo di 3 ad un massimo di 40376 (che corrispondono a 40 riavvii), con una maggior concentrazione intorno ai 50 stati. Quest'ultimo dato ci porta quindi a dedurre che è più probabile che il numero di stati attraversati sia qualche decina, e non diverse (decine di) migliaia.\\
+Comunque sia, il solver $MinConflicts$ non è il migliore tra essi.
+
 
 \subsection{Livello 2}
 La configurazione iniziale del livello 2 è mostrata in figura \ref{lev2}. Le forme mancanti da inserire sono mostrate nelle figure \ref{p}, \ref{smallv}, \ref{bigz}, \ref{i}, \ref{w}, \ref{v}.
@@ -70,19 +83,24 @@ La configurazione iniziale del livello 2 è mostrata in figura \ref{lev2}. Le fo
 \end{figure}
 \\
 \noindent
-\begin{table}[h]
+\begin{table} 
 	\begin{tabular}{|l||*{4}{c|}}\hline 
 		\backslashbox{Miglioria}{Solver} 
 		&\makebox{DFS}&\makebox{Backtracking}&\makebox{Recursive Backtracking}	&\makebox{MinConflicts}\\ \hline 
-		Sì&0.3546 (78.3333)&0.1969 (22.0)&0.1874 (17.0)&0.3349 (1.0) \\ \hline 
-		No&1.8782 (1472.5)&0.1241 (32.0)&0.0984 (19.0)&0.2641 (1.0)  \\ \hline 
+		Sì&0.1429 (57.75)&0.1405 (22.0)&0.1227 (17.0)&\textcolor{red}{0.6263 (1414.7)} \\ \hline 
+		No&1.9350 (1901.25)&0.0695 (32.0)&\textcolor{ForestGreen}{0.0579 (19.0)}&0.2054 (145.9444)  \\ \hline 
 	\end{tabular} 
-	\caption{Tempi di esecuzione in secondi del livello 0} 
 \end{table}
 
 \subsubsection{Osservazioni}
-In questo esercizio il numero di forme da inserire è 6, generando così uno spazio degli stati notevolmente maggiore.
-La prima cosa da notare è che l'algoritmo DFS inizia a diventare poco efficiente, sia dal punto di vista del numero di azioni da eseguire, sia come tempi di esecuzioni
+In questo livello di difficoltà, il numero di forme da inserire è 6, generando così uno spazio degli stati notevolmente maggiore dei livelli precedentemente affrontati, con conseguenti osservazioni differenti.
+Il solver migliore risulta infatti essere il \textit{Recursive Backtracking} senza il $CCC$, mentre il peggiore è (di nuovo) il $MinConflicts$ con il $RR$.\\
+
+Osserviamo che $DFS$ senza $CCC$ risulta essere molto peggio del suo corrispettivo con $CCC$: il tempo di esecuzione è infatti quasi 14 volte maggiore, mentre il numero di stati attraversati è circa 33 volte maggiore.\\
+
+Per quanto riguarda il solver \textit{Recursive Backtracking} senza il $CCC$, osserviamo che non differisce di molto dal $Backtracking$ con la stessa miglioria (infatti i tempi sono simili). Mentre, invece, essi necessitano molto più tempo per arrivare alla soluzione, se utilizzati con il $CCC$, per il motivo già spiegato nel Livello 0.\\
+
+Le osservazioni per $MinConflicts$ risultano essere le stesse per il Livello 1, ma con parametri differenti: il solver senza il $RR$ è sorprendentemente fallito solo nel $7,5\%$ dei test, mentre il solver con il $RR$ attraversa un numero di stati che oscilla da un minimo di 8 ad un massimo di 16268, con una maggior concentrazione intorno ai 150 stati attraversati.
 
 \subsection{Livello 3}
 La configurazione iniziale del livello 3 è mostrata in figura \ref{lev3}. Le forme mancanti da inserire sono mostrate nelle figure \ref{z}, \ref{smallv}, \ref{bigz}, \ref{c}, \ref{y}, \ref{t}, \ref{w}, \ref{v}.
@@ -95,17 +113,22 @@ La configurazione iniziale del livello 3 è mostrata in figura \ref{lev3}. Le fo
 \\
 \noindent
 
-\begin{table}[h] 
+\begin{table} 
 	\begin{tabular}{|l||*{4}{c|}}\hline 
 		\backslashbox{Miglioria}{Solver} 
 		&\makebox{DFS}&\makebox{Backtracking}&\makebox{Recursive Backtracking}	&\makebox{MinConflicts}\\ \hline 
-		Sì&36.227 (12343.8)&1.5018 (198.0)&0.5316 (55.0)&40.468 (15.1666) \\ \hline 
-		No&1786,2 (312.000)&1.3156 (1179.0)&0.8229 (572.0)& ()  \\ \hline 
+		Sì& ()&1.0607 (198.0)&\textcolor{ForestGreen}{0.3522 (55.0)}&30.473 (65528503) \\ \hline 
+		No& \textcolor{red}{30 minuti}&1.0379 (1179.0)&0.5709 (572.0)&0.1359 (36.0)  \\ \hline 
 	\end{tabular} 
-	\caption{Tempi di esecuzione in secondi del livello 0} 
 \end{table}
 
+\subsubsection{Osservazioni}
+Il livello 3 è il primo che presenta un grado di difficoltà elevato. Infatti il solver $DFS$ senza il $CCC$ impiega in media circa 30 minuti per arrivare ad una soluzione, ed è proprio in questo livello che si può meglio apprezzare l'utile incidenza della potatura fatta dal $CCC$ nel tempo di esecuzione: il $DFS$ che fa utilizzo di tale miglioria risulta essere molto più veloce del corrispettivo solver che non ne fa utilizzo.\\
+Il solver dalle migliori prestazioni per questo problema è il \textit{Recursive Backtracking} con il $CCC$.\\
 
+Nel solver $MinConflicts$ i dati evidenziano invece che il solver senza $RR$ è parecchio veloce, ma porta ad una soluzione solo nel $2,5\%$ dei casi.
+Con il $RR$, osserviamo sono attraversati in media 65.528.503 stati (che corrispondono a 655285 riavii). Tuttavia questo numero oscilla da un minimo di 170 ad un massimo di $5,337913878*10^{16}$.
+Quest'ultimo dato ci fa capire che, per questo livello, affidarsi a questo solver è un azzardo spesso fallimentare: è molto difficile che porti ad una soluzione, oppure potrebbe metterci un tempo troppo elevato. 
 \subsection{Livello 4}
 La configurazione iniziale del livello 4 è mostrata in figura \ref{lev4}. Tutte le forme devono essere inserite nella griglia.
 \begin{figure}[h]
@@ -117,15 +140,21 @@ La configurazione iniziale del livello 4 è mostrata in figura \ref{lev4}. Tutte
 \\
 \noindent
 
-\begin{table}[h] 
+ \begin{table} 
 	\begin{tabular}{|l||*{4}{c|}}\hline 
 		\backslashbox{Miglioria}{Solver} 
 		&\makebox{DFS}&\makebox{Backtracking}&\makebox{Recursive Backtracking}	&\makebox{MinConflicts}\\ \hline 
-		Sì& ()&1.4544 (184.0)&16.338 (2640.0)&24.502 (5.42857) \\ \hline 
-		No& ()&5.1879 (4002.0)&26.403 (23971.0)& ()  \\ \hline 
+		Sì& ()&\textcolor{ForestGreen}{1.0781 (184.0)}&13.126 (2640.0)&17.266 (21026751) \\ \hline 
+		No& ()&3.8761 (4002.0)&23.131 (23971.0)&2.0668 (796.4285)  \\ \hline 
 	\end{tabular} 
-	\caption{Tempi di esecuzione in secondi del livello 0} 
 \end{table}
+
+\subsubsection{Osservazioni}
+In quest'ultimo livello, il solver miglior è il $Backtracking$ con il $CCC$, mentre qualsiasi tipo di $DFS$ è ritenuto inaccettabile nel tempo di esecuzione.\\
+
+Le osservazioni per $MinConflicts$ risultano essere le stesse per il Livello 3, ma con parametri differenti: il solver senza il $RR$ è fallito nell' $82,5\%$ dei test, mentre il solver con il $RR$ attraversa un numero di stati che oscilla da un minimo di 81581 ad un massimo di 791.975.126 .\\
+Quest'ultimo dato ci fa capire che, per questo livello, affidarsi a questo solver è un azzardo spesso fallimentare: è molto difficile che porti ad una soluzione, oppure potrebbe metterci un tempo troppo elevato. 
+
 
 
 
